--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node", "vue-router"],
+    "types": ["node", "vue-router", "pinia"],
 
     /* Linting */
     "strict": true,
