--- a/Admin/package.json
+++ b/Admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "element-plus": "^2.9.7",
     "pinia": "^2.3.1",
     "sass": "^1.86.0",
